# contract.price

./: .gitignore  contract_builder_102523_1213.exe.spec  main.py  pyproject.toml
