[tool.poetry]
name = "contract-price"
version = "0.1.0"
description = ""
authors = ["jlmodell <modell.jeff@me.com>"]
readme = "README.md"
packages = [{include = "contract"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.1"
pymongo = "^4.5.0"
openpyxl = "^3.1.2"
rich = "^13.6.0"
pyinstaller = "^6.1.0"
polars = "^0.19.11"
pyarrow = "^13.0.0"
pydotenv = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
